versioned_docs/version-2.6.x/微服务开发/服务端配置.md
---
title: '服务端配置'
sidebar_position: 3
hide_title: true
---

## 基本介绍

服务端支持配置文件，所有的配置将会自动映射到配置对象中。配置对象如下：

```go
// GrpcServerConfig is the configuration for server.
type GrpcServerConfig struct {
    Address          string              // (optional) Address for server listening.
    Name             string              // (optional) Name for current service.
    Logger           *glog.Logger        // (optional) Logger for server.
    LogPath          string              // (optional) LogPath specifies the directory for storing logging files.
    LogStdout        bool                // (optional) LogStdout specifies whether printing logging content to stdout.
    ErrorStack       bool                // (optional) ErrorStack specifies whether logging stack information when error.
    ErrorLogEnabled  bool                // (optional) ErrorLogEnabled enables error logging content to files.
    ErrorLogPattern  string              // (optional) ErrorLogPattern specifies the error log file pattern like: error-{Ymd}.log
    AccessLogEnabled bool                // (optional) AccessLogEnabled enables access logging content to file.
    AccessLogPattern string              // (optional) AccessLogPattern specifies the error log file pattern like: access-{Ymd}.log
}
```

配置文件的自动读取逻辑与框架一致，详细介绍请参考章节： [配置管理](../核心组件/配置管理/配置管理.md)

## 配置模板

一个完整的配置模板示例：

```
grpc:
  name:             "demo"  # 服务名称
  address:          ":8000" # 自定义服务监听地址
  logPath:          "./log" # 日志存储目录路径
  logStdout:        true    # 日志是否输出到终端
  errorLogEnabled:  true    # 是否开启错误日志记录
  accessLogEnabled: true    # 是否开启访问日志记录
  errorStack:       true    # 当产生错误时，是否记录错误堆栈
```

在没有配置 `address` 的情况下， `grpc server` 将会使用本地网卡的所有 `ip` 地址加上 **随机空闲端口** 来启动（默认配置 `:0`）。如果想要指定 `ip` 但是使用随机空闲端口启动 `grpc server`，可以使用 `ip:0` 的格式来配置 `address`，例如： `192.168.1.1:0, 10.0.1.1:0`。